--- a/templates/WebApp/topbar.html
+++ b/templates/WebApp/topbar.html
@@ -5,7 +5,7 @@
     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
         <i class="fa fa-bars"></i>
     </button>
-    <h1>SERVIR App Template</h1>
+    <h1>Geospatial App</h1>
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
