--- a/WebApp/static/css/basic.css
+++ b/WebApp/static/css/basic.css
@@ -9902,8 +9902,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-color: #0c1a4e;
+  background-image: linear-gradient(180deg, #122750 10%, #0c193d 100%);
   background-size: cover;
 }
 
