--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -52,7 +52,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                         class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Map Viewer from WMS Service</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Display WMS Content</h6>
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
@@ -64,6 +64,46 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-lg-12 mb-4">
+                            <div class="card shadow mb-4">
+                                <div class="card-header py-3">
+                                    <h6 class="m-0 font-weight-bold text-primary">About WMS</h6>
+                                </div>
+                                <div class="card-body">
+                                    <div class="text-left text-dark">
+                                        WMS stands for web map services. This is one very common mechanism to 
+                                        show geospatial content. It is a standard recongized by the Open Geospatial Consortium.
+                                        <hr>
+                                        Usually, you can find WMS services from government agencies, universities, and other entities.
+                                        WMS services are usually free to use. WMS services can be produced by a variety of software,
+                                        the most common are ArcGIS for Server, GeoServer, and THREDDS.
+                                        <hr>
+                                        Web applications use common JS libraries such as Leaflet, OpenLayers and others to display WMS content.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 mb-4">
+                            <div class="card shadow mb-4">
+                                <div class="card-header py-3">
+                                    <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                                </div>
+                                <div class="card-body">
+                                    <div class="text-left text-dark">
+                                        <ul>
+                                        <li><strong>templates/WebApp/map_fixedsize.html</strong> contains the HTML code to modify 
+                                        the text and graphics in this page.</li>
+                                        <li><strong>staticfiles/js/map1.js</strong> controls the behavior of the map.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
