--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -56,6 +56,47 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-lg-12 mb-4">
+                            <div class="card shadow mb-4">
+                                <div class="card-header py-3">
+                                    <h6 class="m-0 font-weight-bold text-primary">About GEE</h6>
+                                </div>
+                                <div class="card-body">
+                                    <div class="text-left text-dark">
+                                        Google Earth Engine (GEE) is a very popular cloud-based platform for processing and analyzing 
+                                        geospatial data.
+                                        <hr>
+                                        GEE contains a large number of datasets, including satellite imagery, climate data, and other 
+                                        spatial data. You can create your own datasets by combining existing datasets, or by uploading 
+                                        your own data.
+                                        <hr>
+                                        In order to use GEE content in your web application, you need to create a GEE account and
+                                        obtain an API key. You can find more information about GEE accounts and API keys at <a href="">[link]</a>.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 mb-4">
+                            <div class="card shadow mb-4">
+                                <div class="card-header py-3">
+                                    <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                                </div>
+                                <div class="card-body">
+                                    <div class="text-left text-dark">
+                                        <ul>
+                                        <li><strong>templates/WebApp/map_from_GEE.html</strong> contains the HTML code to modify 
+                                        the text and graphics in this page.</li>
+                                        <li><strong>staticfiles/js/map2.js</strong> controls the behavior of the map.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
